[tool.poetry]
name = "hamilflow"
version = "0.1.0"
description = "Dataset of simple physical systems."
authors = ["LM <hi@leima.is>", "cmp0xff <cmp0xff@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "hamilflow"}]


[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.3"
pandas = "^2.2.2"
pydantic = "^2.6.1"
loguru = "^0.7.2"
matplotlib = "^3.8.3"
scipy = "^1.12.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.1"
pytest-cov = "^4.1.0"


[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5.30"
mkdocs-autorefs = "^1.0.1"
mkdocstrings = {version = "^0.25.2", extras = ["python"]}
mkdocs-jupyter = "^0.24.8"


[tool.poetry.group.tutorial.dependencies]
plotly = "^5.19.0"


[tool.poetry.group.dev.dependencies]
commitizen = "*"


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
changelog_file = "docs/changelog.md"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
