[tool.poetry]
name = "hamilflow"
version = "0.1.0"
description = "Dataset of simple physical systems."
authors = ["LM <hi@leima.is>", "cmp0xff <cmp0xff@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "hamilflow"}]


[tool.poetry.dependencies]
python = ">=3.10,<3.13"

# data
pandas = {version = "^2.2.2", extras = ["computation"]}
pydantic = "^2.8.2"

# numerics
numpy = "^2.1.0"
scipy = "^1.14.1"

# logging
loguru = "^0.7.2"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-cov = "*"
pytest-xdist = "*"


[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5.31"
mkdocs-autorefs = "^1.0.1"
mkdocstrings = {version = "^0.25.2", extras = ["python"]}
mkdocs-jupyter = "^0.24.8"
mkdocs = "^1.6.0"
jupytext = "^1.16.4"


[tool.poetry.group.tutorial.dependencies]
plotly = "^5.23.0"


[tool.poetry.group.dev.dependencies]
commitizen = "*"
pre-commit = "*"


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
changelog_file = "docs/changelog.md"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.jupytext]
formats = "ipynb,py:percent"


[tool.ruff]
line-length = 88  # black default
target-version = "py310"
# unsafe-fixes = true


[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D107",  # undocumented-public-init: we document the class instead
    "E501",  # line-too-long: we use black instead
    "FA", "PLR", "PD", "SLF", "PT", "FBT", "ANN", "TRY", "ARG", "FIX", "TD", "TID", "ERA", "INP", "SIM", "RUF", "RET"
]


[tool.ruff.lint.per-file-ignores]
"docs/**/*.py" = [
    "D100",  # undocumented-public-module: we keep tutorials clean and do not include doc strings
]
"tests/**/*.py" = [
    "S101",  # assert: Fine in tests
]


[tool.ruff.lint.isort]
known-first-party = ["hamilflow"]


[tool.black]
line-length = 88  # black default


[tool.mypy]
plugins = ["numpy.typing.mypy_plugin"]


[[tool.mypy.overrides]]
module = ["plotly.*", "scipy.*"]
ignore_missing_imports = true
